# gweyl

./: CMakeLists.txt  LICENSE  README.md  gweyl.hpp  gweylConfig.h  gweylConfig.h.in  gweyl_private.hpp
Cartan/: CMakeLists.txt  Cartan.cpp  PositiveRoots.cpp  Vector.cpp  VectorRootSpace.cpp
CartanMatrix/: CMakeLists.txt  CartanMatrix.cpp  InverseCartanMatrix.cpp
IrreducibleRepresentation/: CMakeLists.txt  IrreducibleRepresentation.cpp
NumberVector/: CMakeLists.txt  NumberVector.cpp
Representation/: Representation.cpp
Trace/: CMakeLists.txt  Trace.cpp
Vector/: CMakeLists.txt  InnerProduct.cpp  Vector.cpp
VectorRootSpace/: CMakeLists.txt  InnerProduct.cpp  Vector.cpp  VectorRootSpace.cpp
doc/: tmp.tex
test/: CMakeLists.txt  CartanMatrixTest.cpp  CartanTest.cpp  InverseCartanMatrixTest.cpp  IrreducibleRepresentationTest.cpp  PositiveRootsTest.cpp  RepresentationTest.cpp  RhoTest.cpp  VectorRootSpaceTest.cpp  VectorTest.cpp  work.cpp
